Fix comment label in detailed dashboard

--- a/index.html
+++ b/index.html
@@ -649,7 +649,7 @@
 
             // Add active class to clicked tab
             event.target.classList.add('active');
-        }    /* ---------  Detailed Dashboard (Original)  --------- */
+        }    /* ---------  Detailed Dashboard  --------- */
         function buildDetailedDashboard(contracts) {
             const dash = document.getElementById('dashboard');
             dash.innerHTML = '';
